@@ -20,10 +20,9 @@
 # along with GnuCOBOL.  If not, see <https://www.gnu.org/licenses/>.
 
 bin_PROGRAMS = cobc
-cobc_SOURCES = cobc.c cobc.h ppparse.y pplex.c parser.y scanner.c	\
-	config.c reserved.c error.c tree.c tree.h cconv.c cconv.h	\
-	field.c typeck.c codegen.c help.c config.def flag.def		\
-	warning.def codeoptim.def ppparse.def codeoptim.c
+cobc_SOURCES = cobc.c cobc.h ppparse.y pplex.c parser.y scanner.c config.c \
+	reserved.c error.c tree.c tree.h field.c typeck.c codegen.c help.c \
+	config.def flag.def warning.def codeoptim.def ppparse.def codeoptim.c
 
 #cobc_SOURCES = cobc.c cobc.h ppparse.y pplex.l parser.y scanner.l config.c
 
