@@ -60,7 +60,7 @@
 
 #include "cobc.h"
 #include "tree.h"
-#include "cconv.h"
+#include "../libcob/coblocal.h"
 
 #include "../libcob/cobgetopt.h"
 
@@ -3613,7 +3613,8 @@ process_command_line (const int argc, char **argv)
 
 		case 14:
 			/* -febcdic-table=<cconv-table> */
-			if (cobc_deciph_ebcdic_table_name (cob_optarg)) {
+			cb_ebcdic_table = cob_get_collation_by_name (cob_optarg, NULL, NULL);
+			if (cb_ebcdic_table < 0) {
 				cobc_err_exit (COBC_INV_PAR, "-febcdic-table");
 			}
 			break;
