@@ -37,7 +37,6 @@
 
 #include "cobc.h"
 #include "tree.h"
-#include "cconv.h"
 
 #ifdef	HAVE_ATTRIBUTE_ALIGNED
 #define COB_ALIGN " __attribute__((aligned))"
@@ -212,11 +211,8 @@ static unsigned int		needs_exit_prog = 0;
 static unsigned int		needs_unifunc = 0;
 static unsigned int		need_save_exception = 0;
 static unsigned int		gen_nested_tab = 0;
-static unsigned int		gen_default_ebcdic = 0;
-static unsigned int		gen_alt_ebcdic = 0;
+static unsigned int		gen_ascii_ebcdic = 0;
 static unsigned int		gen_ebcdic_ascii = 0;
-static unsigned int		gen_ibm_ebcdic = 0;
-static unsigned int		gen_gcos7_ebcdic = 0;
 static unsigned int		gen_native = 0;
 static unsigned int		gen_custom = 0;
 static unsigned int		gen_figurative = 0;
@@ -2542,44 +2538,6 @@ output_literals_figuratives_and_constants (void)
 
 /* Collating tables */
 
-enum cb_cconv_dir { OF_ASCII, TO_ASCII };
-static const char *
-colseq_table_name (const enum ebcdic_table table_name,
-		   const enum cb_cconv_dir direction,
-		   const unsigned int field)
-{
-	/* FIXME: assumes !COB_EBCDIC_MACHINE */
-	/* FIXME: record direction as well, so we know better what tables and
-	   fields to output later on; for now only OF_ASCII is recorded. */
-	switch (table_name) {
-	case CB_EBCDIC_DEFAULT:
-	default:
-		gen_default_ebcdic |= field ? 2 : 1;
-		return direction == OF_ASCII
-			? "cob_ascii_ebcdic"
-			: "cob_ebcdic_ascii";
-	case CB_EBCDIC_RESTRICTED_GC:
-		gen_alt_ebcdic |= field ? 2 : 1;
-		if (direction == TO_ASCII) {
-			/* TODO: define inverse conversion */
-			cobc_err_msg ("Unexpected conversion from "
-				      "restricted EBCDIC to ASCII!");
-			COBC_ABORT ();
-		}
-		return "cob_a2e";
-	case CB_EBCDIC_IBM:
-		gen_ibm_ebcdic |= field ? 2 : 1;
-		return direction == OF_ASCII
-			? "cob_ascii_ibmebcdic"
-			: "cob_ibmebcdic_ascii";
-	case CB_EBCDIC_GCOS:
-		gen_gcos7_ebcdic |= field ? 2 : 1;
-		return direction == OF_ASCII
-			? "cob_ascii_gcos7ebcdic"
-			: "cob_gcos7ebcdic_ascii";
-	}
-}
-
 /* Outputs conversion from given table, or a native conversion (identity) when
    omitted (if table == NULL). */
 static void
@@ -2597,138 +2555,59 @@ output_colseq_table (const char * const table_name,
 }
 
 static void
-output_colseq_table_field (const char * table_name)
+output_colseq_table_field (const char * field_name, const char * table_name)
 {
 	const int i = lookup_attr (COB_TYPE_ALPHANUMERIC, 0, 0, 0, NULL, 0);
-	output_storage ("static cob_field f_%s = { 256, (cob_u8_ptr)%s, &%s%d };\n",
-			table_name, table_name, CB_PREFIX_ATTR, i);
-}
-
-static void
-output_default_ebcdic_table (void)
-{
-	const char * table_name;
-
-	if (!gen_default_ebcdic) {
-		return;
-	}
-
-	table_name = colseq_table_name (CB_EBCDIC_DEFAULT, OF_ASCII, 0);
-	output_storage ("\n/* ASCII to EBCDIC table */\n");
-	output_colseq_table (table_name, cob_ascii_ebcdic);
-	if (gen_default_ebcdic > 1) {
-		output_colseq_table_field (table_name);
-	}
-	output_storage ("\n");
-
-}
-
-static void
-output_alt_ebcdic_table (void)
-{
-	const char * table_name;
-
-	if (!gen_alt_ebcdic) {
-		return;
-	}
-
-	table_name = colseq_table_name (CB_EBCDIC_RESTRICTED_GC, OF_ASCII, 0);
-	output_storage ("\n/* ASCII to EBCDIC translate table (restricted) */\n");
-	output_colseq_table (table_name, cob_ascii_alt_ebcdic);
-	if (gen_alt_ebcdic > 1) {
-		output_colseq_table_field (table_name);
-	}
-	output_storage ("\n");
-}
-
-static void
-output_ibm_ebcdic_table (void)
-{
-	const char * table_name;
-
-	if (!gen_ibm_ebcdic) {
-		return;
-	}
-
-	table_name = colseq_table_name (CB_EBCDIC_IBM, OF_ASCII, 0);
-	output_storage ("\n/* ASCII to IBM EBCDIC translate table (restricted) */\n");
-	output_colseq_table (table_name, cob_ascii_ibmebcdic);
-	if (gen_ibm_ebcdic > 1) {
-		output_colseq_table_field (table_name);
-	}
-	output_storage ("\n");
-}
-
-static void
-output_gcos7_ebcdic_table (void)
-{
-	const char * table_name;
-
-	if (!gen_gcos7_ebcdic) {
-		return;
-	}
-
-	table_name = colseq_table_name (CB_EBCDIC_GCOS, OF_ASCII, 0);
-	output_storage ("\n/* ASCII to EBCDIC GCOS7 translate table */\n");
-	output_colseq_table (table_name, cob_ascii_gcos7ebcdic);
-	if (gen_gcos7_ebcdic > 1) {
-		output_colseq_table_field (table_name);
-	}
-	output_storage ("\n");
-}
-
-static void
-output_ebcdic_to_ascii_table (void)
-{
-	const char * table_name;
-
-	if (!gen_ebcdic_ascii) {
-		return;
-	}
-
-	table_name = colseq_table_name (CB_EBCDIC_DEFAULT, TO_ASCII, 0);
-	output_storage ("\n/* EBCDIC to ASCII table */\n");
-	output_colseq_table (table_name, cob_ebcdic_ascii);
-
-	if (gen_ebcdic_ascii > 1) {
-		output_storage ("static cob_field f_ebcdic_ascii = { 256, (cob_u8_ptr)%s, &%s%d };\n",
-				table_name, CB_PREFIX_ATTR,
-				lookup_attr (COB_TYPE_ALPHANUMERIC, 0, 0, 0, NULL, 0));
-	}
-
-	output_storage ("\n");
-
-}
-
-static void
-output_native_table (void)
-{
-	if (!gen_native) {
-		return;
-	}
-
-	output_storage ("\n/* NATIVE table */\n");
-	output_colseq_table ("cob_native", NULL);
-
-	if (gen_native > 1) {
-		output_storage ("static cob_field f_native = { 256, (cob_u8_ptr)cob_native, &%s%d };\n",
-				CB_PREFIX_ATTR,
-				lookup_attr (COB_TYPE_ALPHANUMERIC, 0, 0, 0, NULL, 0));
-	}
-
-	output_storage ("\n");
-
+	output_storage ("static cob_field %s = { 256, (cob_u8_ptr)%s, &%s%d };\n",
+			field_name, table_name, CB_PREFIX_ATTR, i);
 }
 
 static void
 output_collating_tables (void)
 {
-	output_default_ebcdic_table ();
-	output_alt_ebcdic_table ();
-	output_ibm_ebcdic_table ();
-	output_gcos7_ebcdic_table ();
-	output_ebcdic_to_ascii_table ();
-	output_native_table ();
+	if (gen_native) {
+		output_storage ("\n/* NATIVE table */\n");
+		output_colseq_table ("cob_native", NULL);
+		if (gen_native > 1) {
+			output_colseq_table_field("f_native", "cob_native");
+		}
+		output_storage ("\n");
+	}
+
+	if (gen_ascii_ebcdic) {
+		output_storage ("\n/* ASCII to EBCDIC table */\n");
+		output_storage ("static const cob_u8_t *\tcob_ascii_ebcdic = NULL;\n");
+		if (gen_ascii_ebcdic > 1) {
+			output_colseq_table_field("f_ascii_ebcdic", "NULL");
+		}
+		output_storage ("\n");
+	}
+
+	if (gen_ebcdic_ascii) {
+		output_storage ("\n/* EBCDIC to ASCII table */\n");
+		output_storage ("static const cob_u8_t *\tcob_ebcdic_ascii = NULL;\n");
+		if (gen_ebcdic_ascii > 1) {
+			output_colseq_table_field("f_ebcdic_ascii", "NULL");
+		}
+		output_storage ("\n");
+	}
+}
+
+static void
+output_init_collating_tables (void)
+{
+	if ((gen_ascii_ebcdic > 0) || (gen_ebcdic_ascii > 0)) {
+		output_line ("cob_get_collation_by_name(\"%s\", %s, %s);",
+				cob_get_collation_name(cb_ebcdic_table),
+				(gen_ebcdic_ascii > 0) ? "&cob_ebcdic_ascii" : "NULL",
+				(gen_ascii_ebcdic > 0) ? "&cob_ascii_ebcdic" : "NULL");
+		if (gen_ascii_ebcdic > 1) {
+			output_line("f_ascii_ebcdic.data = (cob_u8_ptr)cob_ascii_ebcdic;");
+		}
+		if (gen_ebcdic_ascii > 1) {
+			output_line("f_ebcdic_ascii.data = (cob_u8_ptr)cob_ebcdic_ascii;");
+		}
+	}
 }
 
 /* Strings */
@@ -3609,7 +3488,8 @@ output_param (cb_tree x, int id)
 				output ("NULL");
 			}
 #else
-			output ("%s", colseq_table_name (cb_ebcdic_table, OF_ASCII, 0));
+			output ("cob_ascii_ebcdic");
+			gen_ascii_ebcdic |= 1;
 #endif
 			break;
 		case CB_ALPHABET_CUSTOM:
@@ -3751,7 +3631,8 @@ output_param (cb_tree x, int id)
 				gen_native = 2;
 				output ("&f_native");
 #else
-				output ("&f_%s", colseq_table_name (cb_ebcdic_table, OF_ASCII, 1));
+				output ("&f_ascii_ebcdic");
+				gen_ascii_ebcdic |= 2;
 #endif
 				break;
 			case CB_ALPHABET_CUSTOM:
@@ -9164,14 +9045,16 @@ output_file_initialization (struct cb_file *f)
 		const char *alph_write, *alph_read;
 		switch (f->code_set->alphabet_type) {
 		case CB_ALPHABET_ASCII:
-			alph_read = colseq_table_name (cb_ebcdic_table, OF_ASCII, 0);
-			alph_write = colseq_table_name (cb_ebcdic_table, TO_ASCII, 0);
+			alph_read = "cob_ascii_ebcdic";
+			alph_write = "cob_ebcdic_ascii";
 			gen_ebcdic_ascii = 1;
+			gen_ascii_ebcdic |= 1;
 			break;
 		case CB_ALPHABET_EBCDIC:
-			alph_read = colseq_table_name (cb_ebcdic_table, TO_ASCII, 0);
-			alph_write = colseq_table_name (cb_ebcdic_table, OF_ASCII, 0);
+			alph_read = "cob_ebcdic_ascii";
+			alph_write = "cob_ascii_ebcdic";
 			gen_ebcdic_ascii = 1;
+			gen_ascii_ebcdic |= 1;
 			break;
 		/* case CB_ALPHABET_CUSTOM: */
 		default:
@@ -10974,6 +10857,8 @@ output_module_init_function (struct cb_program *prog)
 	} else {
 		output_line ("module->module_sources = NULL;");
 	}
+
+        output_init_collating_tables();
 
 	output_block_close ();
 	output_newline ();
@@ -13272,10 +13157,7 @@ codegen_init (struct cb_program *prog, const char *translate_name)
 		buff[pos] = 0;
 		output_name = cobc_check_string (buff);
 	}
-	gen_default_ebcdic = 0;
-	gen_alt_ebcdic = 0;
-	gen_ibm_ebcdic = 0;
-	gen_gcos7_ebcdic = 0;
+	gen_ascii_ebcdic = 0;
 	gen_ebcdic_ascii = 0;
 	gen_native = 0;
 	gen_figurative = 0;
@@ -13412,8 +13294,7 @@ codegen_internal (struct cb_program *prog, const int subsequent_call)
 		output_newline ();
 	}
 
-	if (((gen_native | gen_default_ebcdic | gen_alt_ebcdic |
-	      gen_ibm_ebcdic | gen_gcos7_ebcdic) > 1)
+	if (((gen_native | gen_ascii_ebcdic) > 1)
 	 || gen_ebcdic_ascii || prog->alphabet_name_list) {
 		(void)lookup_attr (COB_TYPE_ALPHANUMERIC, 0, 0, 0, NULL, 0);
 	}
