@@ -18,10 +18,11 @@
    along with GnuCOBOL.  If not, see <https://www.gnu.org/licenses/>.
 */
 
-#include <stdio.h>		/* for FILE, used in cobc.h */
-
-#include "cobc.h"		/* for cb_strcasecmp */
-#include "cconv.h"
+#include <stddef.h>
+#include <string.h>
+#include <stdio.h>
+#include "common.h"
+#include "coblocal.h"
 
 /* TODO: Maybe use iconv or gconv before extending to other character sets while
    using standard naming scheme?  Note, however, that specifications for GCOS7
@@ -115,7 +116,11 @@ const cob_u8_t cob_ascii_ebcdic[256] = {
 };
 
 
-/* EBCDIC GCOS7 8-bit to ASCII conversion table. */
+/* EBCDIC GCOS7 8-bit to ASCII conversion table:
+
+   https://support.bull.com/ols/product/system/gcos7/gcos7-com/g7-dps7000/doc-com/docf/g/47X257TN27-oct2009/47A205UL04.pdf,
+   p627.  Note one page is missing from this documentation, but the full table
+   can be found in the French version. */
 const cob_u8_t cob_gcos7ebcdic_ascii[256] = {
         0x00, 0x01, 0x02, 0x03, 0x9C, 0x09, 0x86, 0x7F,
         0x97, 0x8D, 0x8E, 0x0B, 0x0C, 0x0D, 0x0E, 0x0F,
@@ -225,6 +230,42 @@ const cob_u8_t cob_gcos7ebcdic_ebcdic[256] = {
         0xE8, 0xE9, 0xFD, 0xEB, 0xEE, 0xED, 0x90, 0xEF,
         0xF0, 0xF1, 0xF2, 0xF3, 0xF4, 0xF5, 0xF6, 0xF7,
         0xF8, 0xF9, 0xB3, 0xFB, 0xB9, 0xEA, 0xBB, 0xFF
+};
+
+/* "default" (?) EBCDIC to ASCII conversion table (restricted) */
+const cob_u8_t cob_ebcdic_ascii_alt[256] = {
+	0x00, 0x01, 0x02, 0x03, 0x09, 0x7F, 0x0B, 0x0C,
+	0x0D, 0x0E, 0x0F, 0x10, 0x11, 0x12, 0x13, 0x08,
+	0x18, 0x19, 0x1C, 0x1D, 0x1E, 0x1F, 0x0A, 0x17,
+	0x1B, 0x05, 0x06, 0x07, 0x16, 0x04, 0x14, 0x15,
+	0x1A, 0x20, 0x2E, 0x3C, 0x28, 0x2B, 0x26, 0x21,
+	0x24, 0x2A, 0x29, 0x3B, 0x2D, 0x2F, 0x7C, 0x2C,
+	0x25, 0x5F, 0x3E, 0x3F, 0x60, 0x3A, 0x23, 0x40,
+	0x27, 0x3D, 0x22, 0x61, 0x62, 0x63, 0x64, 0x65,
+	0x66, 0x67, 0x68, 0x69, 0x6A, 0x6B, 0x6C, 0x6D,
+	0x6E, 0x6F, 0x70, 0x71, 0x72, 0x7E, 0x73, 0x74,
+	0x75, 0x76, 0x77, 0x78, 0x79, 0x7A, 0x7B, 0x41,
+	0x42, 0x43, 0x44, 0x45, 0x46, 0x47, 0x48, 0x49,
+	0x7D, 0x4A, 0x4B, 0x4C, 0x4D, 0x4E, 0x4F, 0x50,
+	0x51, 0x52, 0x5C, 0x53, 0x54, 0x55, 0x56, 0x57,
+	0x58, 0x59, 0x5A, 0x30, 0x31, 0x32, 0x33, 0x34,
+	0x35, 0x36, 0x37, 0x38, 0x39, 0x5B, 0x5D, 0x5E,
+	0x80, 0x81, 0x82, 0x83, 0x84, 0x85, 0x86, 0x87,
+	0x88, 0x89, 0x8A, 0x8B, 0x8C, 0x8D, 0x8E, 0x8F,
+	0x90, 0x91, 0x92, 0x93, 0x94, 0x95, 0x96, 0x97,
+	0x98, 0x99, 0x9A, 0x9B, 0x9C, 0x9D, 0x9E, 0x9F,
+	0xA0, 0xA1, 0xA2, 0xA3, 0xA4, 0xA5, 0xA6, 0xA7,
+	0xA8, 0xA9, 0xAA, 0xAB, 0xAC, 0xAD, 0xAE, 0xAF,
+	0xB0, 0xB1, 0xB2, 0xB3, 0xB4, 0xB5, 0xB6, 0xB7,
+	0xB8, 0xB9, 0xBA, 0xBB, 0xBC, 0xBD, 0xBE, 0xBF,
+	0xC0, 0xC1, 0xC2, 0xC3, 0xC4, 0xC5, 0xC6, 0xC7,
+	0xC8, 0xC9, 0xCA, 0xCB, 0xCC, 0xCD, 0xCE, 0xCF,
+	0xD0, 0xD1, 0xD2, 0xD3, 0xD4, 0xD5, 0xD6, 0xD7,
+	0xD8, 0xD9, 0xDA, 0xDB, 0xDC, 0xDD, 0xDE, 0xDF,
+	0xE0, 0xE1, 0xE2, 0xE3, 0xE4, 0xE5, 0xE6, 0xE7,
+	0xE8, 0xE9, 0xEA, 0xEB, 0xEC, 0xED, 0xEE, 0xEF,
+	0xF0, 0xF1, 0xF2, 0xF3, 0xF4, 0xF5, 0xF6, 0xF7,
+	0xF8, 0xF9, 0xFA, 0xFB, 0xFC, 0xFD, 0xFE, 0xFF
 };
 
 /* ASCII to "default" (?) EBCDIC conversion table (restricted) */
@@ -341,21 +382,81 @@ const cob_u8_t cob_ascii_ibmebcdic[256] = {
 	0x3F, 0x3F, 0x3F, 0x3F, 0x3F, 0x3F, 0x3F, 0x3F
 };
 
-enum ebcdic_table cb_ebcdic_table = CB_EBCDIC_DEFAULT;
-
-/* Decipher character conversion table names */
-int cobc_deciph_ebcdic_table_name (const char *name)
+const char *
+cob_get_collation_name (int col_id)
 {
-	if (! cb_strcasecmp (name, "DEFAULT")) {
-		cb_ebcdic_table = CB_EBCDIC_DEFAULT;
-	} else if (! cb_strcasecmp (name, "RESTRICTED-GC")) {
-		cb_ebcdic_table = CB_EBCDIC_RESTRICTED_GC;
-	} else if (! cb_strcasecmp (name, "IBM")) {
-		cb_ebcdic_table = CB_EBCDIC_IBM;
-	} else if (! cb_strcasecmp (name, "GCOS")) {
-		cb_ebcdic_table = CB_EBCDIC_GCOS;
-	} else {
-		return 1;
+	switch (col_id) {
+	case CB_EBCDIC_DEFAULT: return "DEFAULT";
+	case CB_EBCDIC_RESTRICTED_GC: return "RESTRICTED-GC";
+	case CB_EBCDIC_IBM: return "IBM";
+	case CB_EBCDIC_GCOS: return "GCOS";
+	default: return NULL;
 	}
+}
+
+static int
+cob_get_collation_by_id (int col_id,
+			 const cob_u8_t **p_ebcdic_as_ascii,
+			 const cob_u8_t **p_ascii_as_ebcdic)
+{
+	const cob_u8_t *ebcdic_as_ascii;
+	const cob_u8_t *ascii_as_ebcdic;
+
+	switch (col_id) {
+	case CB_EBCDIC_DEFAULT:
+		ebcdic_as_ascii = cob_ebcdic_ascii;
+		ascii_as_ebcdic = cob_ascii_ebcdic;
+		break;
+	case CB_EBCDIC_RESTRICTED_GC:
+		ebcdic_as_ascii = cob_ebcdic_ascii_alt;
+		ascii_as_ebcdic = cob_ascii_alt_ebcdic;
+		break;
+	case CB_EBCDIC_IBM:
+		ebcdic_as_ascii = cob_ibmebcdic_ascii;
+		ascii_as_ebcdic = cob_ascii_ibmebcdic;
+		break;
+	case CB_EBCDIC_GCOS:
+		ebcdic_as_ascii = cob_gcos7ebcdic_ascii;
+		ascii_as_ebcdic = cob_ascii_gcos7ebcdic;
+		break;
+	default:
+		return -1;
+	}
+
+	if (p_ebcdic_as_ascii != NULL) {
+		*p_ebcdic_as_ascii = ebcdic_as_ascii;
+	}
+
+	if (p_ascii_as_ebcdic != NULL) {
+		*p_ascii_as_ebcdic = ascii_as_ebcdic;
+	}
+
 	return 0;
+}
+
+int
+cob_get_collation_by_name (const char *col_name,
+			   const cob_u8_t **p_ebcdic_as_ascii,
+			   const cob_u8_t **p_ascii_as_ebcdic)
+{
+	enum ebcdic_table col_id;
+
+	if (!strcmp (col_name, "DEFAULT")) {
+		col_id = CB_EBCDIC_DEFAULT;
+	} else if (!strcmp (col_name, "RESTRICTED-GC")) {
+		col_id = CB_EBCDIC_RESTRICTED_GC;
+	} else if (!strcmp (col_name, "IBM")) {
+		col_id = CB_EBCDIC_IBM;
+	} else if (!strcmp (col_name, "GCOS")) {
+		col_id = CB_EBCDIC_GCOS;
+	} else {
+		return -1;
+	}
+
+	int res = cob_get_collation_by_id (col_id, p_ebcdic_as_ascii, p_ascii_as_ebcdic);
+	if (res < 0) {
+		return res;
+	}
+
+	return col_id;
 }
