@@ -888,10 +888,10 @@ AT_DATA([prog.cob], [
            STOP RUN.
 ])
 
-AT_CHECK([$COBC -febcdic-table=default prog.cob], [0], [], [])
-AT_CHECK([$COBC -febcdic-table=restricted-gc prog.cob], [0], [], [])
-AT_CHECK([$COBC -febcdic-table=ibm prog.cob], [0], [], [])
-AT_CHECK([$COBC -febcdic-table=gcos prog.cob], [0], [], [])
+AT_CHECK([$COBC -febcdic-table=DEFAULT prog.cob], [0], [], [])
+AT_CHECK([$COBC -febcdic-table=RESTRICTED-GC prog.cob], [0], [], [])
+AT_CHECK([$COBC -febcdic-table=IBM prog.cob], [0], [], [])
+AT_CHECK([$COBC -febcdic-table=GCOS prog.cob], [0], [], [])
 AT_CHECK([$COBC -febcdic-table=unknown prog.cob], [1], [],
 [cobc: error: invalid parameter: -febcdic-table
 ])
