@@ -1731,17 +1731,17 @@ AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
 [Converted: "A#O2018 |!"], [])
 
 # For characters above IBM (with irregularities) and GCOS should match:
-AT_CHECK([$COMPILE prog.cob -febcdic-table=ibm -o prog-ibm], [0], [], [])
+AT_CHECK([$COMPILE prog.cob -febcdic-table=IBM -o prog-ibm], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog-ibm], [0],
 [Converted: "A#O2018 |@:>@"], []) # prefix is actually "|]" (escaped for m4 preproc)
 
-AT_CHECK([$COMPILE prog.cob -febcdic-table=gcos -o prog-gcos], [0], [], [])
+AT_CHECK([$COMPILE prog.cob -febcdic-table=GCOS -o prog-gcos], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog-gcos], [0],
 [Converted: "A#O2018 |@:>@"], []) # prefix is actually "|]" (escaped for m4 preproc)
 
 # FIXME: This really does not convert to anything close to ASCII;
 # what's this table supposed to encode?
-# AT_CHECK([$COMPILE prog.cob -febcdic-table=restricted-gc -o prog-rgc], [0], [], [])
+# AT_CHECK([$COMPILE prog.cob -febcdic-table=RESTRICTED-GC -o prog-rgc], [0], [], [])
 # AT_CHECK([$COBCRUN_DIRECT ./prog-rgc], [0], [])
 
 AT_CLEANUP
