@@ -1,4 +1,9 @@
 
+2022-12-13 David Declerck <david.declerck@ocamlpro.com>
+
+	* conv.c: file moved from cobc to libcob
+	* common.h: declare the new API for collating sequences
+
 2022-12-13  Simon Sobisch <simonsobisch@gnu.org>
 
 	* strings.c (inspect_find_data): added missing area check bug #865
