@@ -3,6 +3,12 @@
 
 	* typeck.c (validate_move): fix bug #643 add check for SET literal TO val
 
+2022-12-13 David Declerck <david.declerck@ocamlpro.com>
+
+	* conv.c, conv.h: files moved from cobc to libcob
+	* codegen.c: use the new libcob API for collating sequences
+	* flag.def: change "ebcdic-table" to a flag with associated variable
+
 2022-12-13  Simon Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c (cb_warn_opt_val, get_warn_opt_value, set_warn_opt_value), cobc.h:
